// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventInformation.vue renders event information 1`] = `
<div>
  <b-row-stub
    tag="div"
  >
    <b-col-stub
      tag="div"
    >
      <h1>
        event.event: Demo Champion
      </h1>
    </b-col-stub>
     
    <!---->
  </b-row-stub>
   
  <b-row-stub
    tag="div"
  >
    <b-col-stub
      tag="div"
    >
      <h2
        class="bg-sal-orange"
      >
        event.info
      </h2>
    </b-col-stub>
  </b-row-stub>
   
  <b-row-stub
    tag="div"
  >
    <b-col-stub
      tag="div"
    >
      <!---->
    </b-col-stub>
  </b-row-stub>
   
  <b-row-stub
    tag="div"
  >
    <b-col-stub
      cols="12"
      tag="div"
    >
      <dl>
        <dt>
          description
        </dt>
         
        <dd>
          Demo competition on the Village Field
        </dd>
      </dl>
    </b-col-stub>
     
    <!---->
     
    <!---->
     
    <b-col-stub
      cols="6"
      md="3"
      tag="div"
    >
      <dl>
        <dt>
          date
        </dt>
         
        <dd>
          2019-01-22 - 2019-01-24
        </dd>
      </dl>
    </b-col-stub>
     
    <b-col-stub
      cols="6"
      md="3"
      tag="div"
    >
      <dl>
        <dt>
          organizer
        </dt>
         
        <dd>
          
          Local Club
        
        </dd>
      </dl>
    </b-col-stub>
     
    <b-col-stub
      cols="6"
      md="3"
      tag="div"
    >
      <dl>
        <dt>
          location
        </dt>
         
        <dd>
          Village Field
        </dd>
      </dl>
    </b-col-stub>
     
    <!---->
     
    <!---->
  </b-row-stub>
</div>
`;

exports[`EventInformation.vue show management options for organization user 1`] = `
<div>
  <b-row-stub
    tag="div"
  >
    <b-col-stub
      tag="div"
    >
      <h1>
        event.event: Demo Champion
      </h1>
    </b-col-stub>
     
    <!---->
  </b-row-stub>
   
  <b-row-stub
    tag="div"
  >
    <b-col-stub
      tag="div"
    >
      <h2
        class="bg-sal-orange"
      >
        event.info
      </h2>
    </b-col-stub>
  </b-row-stub>
   
  <b-row-stub
    tag="div"
  >
    <b-col-stub
      tag="div"
    >
      <!---->
    </b-col-stub>
  </b-row-stub>
   
  <b-row-stub
    tag="div"
  >
    <b-col-stub
      cols="12"
      tag="div"
    >
      <dl>
        <dt>
          description
        </dt>
         
        <dd>
          Demo competition on the Village Field
        </dd>
      </dl>
    </b-col-stub>
     
    <!---->
     
    <!---->
     
    <b-col-stub
      cols="6"
      md="3"
      tag="div"
    >
      <dl>
        <dt>
          date
        </dt>
         
        <dd>
          2019-01-22 - 2019-01-24
        </dd>
      </dl>
    </b-col-stub>
     
    <b-col-stub
      cols="6"
      md="3"
      tag="div"
    >
      <dl>
        <dt>
          organizer
        </dt>
         
        <dd>
          
          Local Club
        
        </dd>
      </dl>
    </b-col-stub>
     
    <b-col-stub
      cols="6"
      md="3"
      tag="div"
    >
      <dl>
        <dt>
          location
        </dt>
         
        <dd>
          Village Field
        </dd>
      </dl>
    </b-col-stub>
     
    <!---->
     
    <b-col-stub
      cols="6"
      md="3"
      tag="div"
    >
      <dl>
        <dt>
          competition.visibility
        </dt>
         
        <!---->
         
        <dd>
          
          competition.hidden
          
          <b-button-stub
            size="sm"
            tag="button"
            target="_self"
            type="button"
            variant="outline-danger"
          >
            
            competition.publish
          
          </b-button-stub>
        </dd>
      </dl>
    </b-col-stub>
  </b-row-stub>
</div>
`;

exports[`EventInformation.vue show management options for staff 1`] = `
<div>
  <b-row-stub
    tag="div"
  >
    <b-col-stub
      tag="div"
    >
      <h1>
        event.event: Demo Champion
      </h1>
    </b-col-stub>
     
    <!---->
  </b-row-stub>
   
  <b-row-stub
    tag="div"
  >
    <b-col-stub
      tag="div"
    >
      <h2
        class="bg-sal-orange"
      >
        event.info
      </h2>
    </b-col-stub>
  </b-row-stub>
   
  <b-row-stub
    tag="div"
  >
    <b-col-stub
      tag="div"
    >
      <!---->
    </b-col-stub>
  </b-row-stub>
   
  <b-row-stub
    tag="div"
  >
    <b-col-stub
      cols="12"
      tag="div"
    >
      <dl>
        <dt>
          description
        </dt>
         
        <dd>
          Demo competition on the Village Field
        </dd>
      </dl>
    </b-col-stub>
     
    <!---->
     
    <!---->
     
    <b-col-stub
      cols="6"
      md="3"
      tag="div"
    >
      <dl>
        <dt>
          date
        </dt>
         
        <dd>
          2019-01-22 - 2019-01-24
        </dd>
      </dl>
    </b-col-stub>
     
    <b-col-stub
      cols="6"
      md="3"
      tag="div"
    >
      <dl>
        <dt>
          organizer
        </dt>
         
        <dd>
          
          Local Club
        
        </dd>
      </dl>
    </b-col-stub>
     
    <b-col-stub
      cols="6"
      md="3"
      tag="div"
    >
      <dl>
        <dt>
          location
        </dt>
         
        <dd>
          Village Field
        </dd>
      </dl>
    </b-col-stub>
     
    <b-col-stub
      cols="6"
      md="3"
      tag="div"
    >
      <dl>
        <dt>
          competition.status
        </dt>
         
        <!---->
         
        <dd>
          
          competition.unlocked
          
          <b-button-stub
            size="sm"
            tag="button"
            target="_self"
            type="button"
            variant="outline-danger"
          >
            
            competition.lock
          
          </b-button-stub>
        </dd>
      </dl>
    </b-col-stub>
     
    <b-col-stub
      cols="6"
      md="3"
      tag="div"
    >
      <dl>
        <dt>
          competition.visibility
        </dt>
         
        <!---->
         
        <dd>
          
          competition.hidden
          
          <b-button-stub
            size="sm"
            tag="button"
            target="_self"
            type="button"
            variant="outline-danger"
          >
            
            competition.publish
          
          </b-button-stub>
        </dd>
      </dl>
    </b-col-stub>
  </b-row-stub>
</div>
`;
